--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" width="device-width, initial-scale=1">
 	<title>Wellness</title>
 
-	<link rel="stylesheet" type="text/css" href="landingpage1.css" />
+	<link rel="stylesheet" type="text/css" href="index.css" />
 
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
@@ -54,7 +54,7 @@
 			</div>
 		</section>
 	</section>
-		<script src="js/landingpage1.js"></script>
+		<script src="js/index.js"></script>
 
 </body>
 </html>
